syntax = "proto3";

package kv;

message GetRequest {
    string bucket = 1;
    string key = 2;
}

message GetResponse {
    bytes payload = 1;
}

message PutRequest {
    string bucket = 1;
    string key = 2;
    bytes value = 3;
}

message WriteResponse {
    string message = 1;
}

message DeleteRequest {
    string bucket = 1;
    string key = 2;
}

service KV {
    rpc Get (GetRequest) returns (GetResponse) {}
    rpc Put (PutRequest) returns (WriteResponse) {}
    rpc Delete (DeleteRequest) returns (WriteResponse) {}
}